--- a/web/index.html
+++ b/web/index.html
@@ -15,18 +15,21 @@
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+    <meta name="description" content="Portfolio: Rahul Badgujar" />
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="my_portfolio" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Portfolio: Rahul Badgujar"
+    />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>my_portfolio</title>
+    <title>Portfolio: Rahul Badgujar</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
